# Heliox-OS

./: .gitignore  AGENT_DEVELOPMENT_GUIDE.md  CACHE_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  GESTURES.md  IPC_MESSAGE_FORMATS.md  LICENSE  README.md  SECURITY.md  check_commits.py  comment.md  commit_stats.txt  extracted_func.txt  plan_history.db  pr101.diff  pr122.diff  pr331.diff  pr331_utf8.diff  pr346.diff  pr353.diff  pr353_Cargo.toml  pr353_CommandInput.svelte  pr353_commands.rs  pr353_comment.md  pr353_main.rs  pr353_utf8.diff  pr361.diff  pr364.diff  pr383.diff  pr383_comment.md  pr383_latest.diff  pr383_latest2.diff  pr383_new.diff  pr383_utf8.diff  pr384.diff  pr389_new.diff  pr390.diff  pr390_comment.md  (+20 more)
daemon/: README.md  pilot-cli.py  pyproject.toml  requirements-lock.txt  ruff.toml  test_8bit.py  test_fp16.py  test_gemini_api.py  test_hf.py  test_integration.py  test_ocr.py  test_predict.py  test_tribe.py
daemon/benchmarks/: react_latency.py
daemon/pilot/: actions.py  changelog.py  config.py  export_logs.py  logger.py  server.py
daemon/pilot/agents/: _code_preamble.py  autonomous.py  autonomous_healing.py  background.py  base_agent.py  calendar_agent.py  chain_planner.py  circuit_breaker.py  code_agent.py  code_sanitizer.py  comm_agent.py  decomposer.py  destructive_critic.py  email_agent.py  executor.py  forensics_agent.py  git_agent.py  monitor_agent.py  multi_agent.py  narrator.py  orchestrator.py  plan_differ.py  planner.py  proactive.py  prompt_improver.py  reflector.py  registry.py  rss_agent.py  sandbox.py  screen_vision.py  self_heal.py  semantic_search_agent.py  ssh_agent.py  subconscious.py  system_agent.py  threat_containment.py  user_supervision.py  verifier.py  voice_gesture_workflow.py  web_agent.py
daemon/pilot/cognitive/: __init__.py  ambient_intelligence.py  attention_scorer.py  biometric_loop.py  clipboard_manager.py  cognitive_engine.py  cognitive_handoff.py  cognitive_offload.py  evolving_persona.py  hub.py  intent_predictor.py  neural_bridge.py  quantum_cognitive.py  stress_gate.py  tribe_engine.py
daemon/pilot/db/: redis_adapter.py  sqlite_pool.py
daemon/pilot/memory/: context_compressor.py  semantic.py  sliding_window.py  store.py  workspace_index.py
daemon/pilot/models/: CACHE.md  budget_tracker.py  cache.py  cloud.py  gpu_utils.py  llamacpp.py  ollama.py  rate_limiter.py  requirements.txt  router.py
daemon/pilot/multimodal/: fusion.py
daemon/pilot/network/: __init__.py  collab_executor.py  mesh.py  peer_connection.py  peer_discovery.py  skill_sync.py
daemon/pilot/plugins/: __init__.py  wasm_runtime.py
daemon/pilot/reasoning/: events.py
daemon/pilot/security/: audit.py  gateway.py  permission_audit.py  permissions.py  privileges.py  risk_gate.py  risk_gate_weights.npz  risk_model.py  risk_observation.py  risk_safety.py  sandbox.py  sanitizer.py  validator.py  vault.py
daemon/pilot/skills/: __init__.py  base.py  loader.py
daemon/pilot/swarm/: __init__.py  swarm_manager.py  swarm_router_agent.py
daemon/pilot/system/: action_preview.py  api_client.py  apt.py  browser.py  browser_backend.py  (+39 more)
daemon/scripts/: collect_risk_training_data.py  risk_dataset.jsonl  train_risk_gate.py
daemon/tests/: conftest.py  demo_cache.py  processes_test.py  test_abort_rpc.py  test_action_permissions.py  test_action_preview.py  test_async_audit_logger.py  test_autonomous_healing.py  test_broadcast_notification.py  test_browser_clone_accessor.py  test_budget_tracker.py  test_budget_tracker_tasks.py  test_circuit_breaker.py  test_cloud_client.py  test_cognitive_engine.py  test_config_paths.py  test_config_validation.py  test_confirmation_rpc_concurrency.py  test_context_compressor.py  test_continuous_recorder.py  test_cursor_handlers.py  test_daemon_manager.py  test_data_dir_validation.py  test_decomposer.py  test_destructive_critic.py  test_directory_summary.py  test_dom_diff.py  test_dry_run_safety.py  test_elevation.py  test_elevation_rpc.py  test_email_agent_mocked.py  test_execute_tracked.py  test_executor_batch_attribution.py  test_executor_narrator_wiring.py  test_export_logs_cli.py  test_export_react_trace.py  test_feature_config_rpc.py  test_firecracker_sandbox.py  test_fusion.py  test_gateway_audit.py  (+70 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+138 files in other folders)
