[package]
name = "heliox-os"
version = "0.6.2"
edition = "2021"
description = "Heliox OS — AI System Control Agent"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
pdf-extract = "0.7.2"
zip = "0.6"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.30"
futures-util = "0.3"
dirs = "6"

sysinfo = "0.39"
battery = "0.7"
screenshots = "0.8"

opener = "0.8"
enigo = "0.6"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
